--- a/0x02-i18n/translations/en/LC_MESSAGES/messages.po
+++ b/0x02-i18n/translations/en/LC_MESSAGES/messages.po
@@ -1,5 +1,35 @@
-msgid "home_title"
-msgstr "Welcome to Holberton"
+# English translations for PROJECT.
+# Copyright (C) 2024 ORGANIZATION
+# This file is distributed under the same license as the PROJECT project.
+# FIRST AUTHOR <EMAIL@ADDRESS>, 2024.
+#
+msgid ""
+msgstr ""
+"Project-Id-Version: PROJECT VERSION\n"
+"Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
+"POT-Creation-Date: 2024-11-05 17:37+0300\n"
+"PO-Revision-Date: 2024-11-05 17:38+0300\n"
+"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"Language: en\n"
+"Language-Team: en <LL@li.org>\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"MIME-Version: 1.0\n"
+"Content-Type: text/plain; charset=utf-8\n"
+"Content-Transfer-Encoding: 8bit\n"
+"Generated-By: Babel 2.16.0\n"
 
+#: templates/1-index.html:7 templates/2-index.html:7
+msgid "Welcome to Holberton"
+msgstr "Welcome to Holberton"  # You can leave this as-is for the English version.
+
+#: templates/1-index.html:11 templates/2-index.html:11
+msgid "Hello world"
+msgstr "Hello world"  # Leave this as-is for the English version.
+
+#: templates/3-index.html:8
+msgid "home_title"
+msgstr "Welcome to Holberton"  # Translate the home_title key to English.
+
+#: templates/3-index.html:12
 msgid "home_header"
-msgstr "Hello world!"
+msgstr "Hello world!"  # Translate the home_header key to English.
