--- a/0x02-i18n/translations/fr/LC_MESSAGES/messages.po
+++ b/0x02-i18n/translations/fr/LC_MESSAGES/messages.po
@@ -1,14 +1,14 @@
 # French translations for PROJECT.
-# Copyright (C) 2024 ORGANIZATION
+# Copyright (C) 2023 ORGANIZATION
 # This file is distributed under the same license as the PROJECT project.
-# FIRST AUTHOR <EMAIL@ADDRESS>, 2024.
+# FIRST AUTHOR <EMAIL@ADDRESS>, 2023.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2024-11-05 17:37+0300\n"
-"PO-Revision-Date: 2024-11-05 17:38+0300\n"
+"POT-Creation-Date: 2023-03-01 19:22+0100\n"
+"PO-Revision-Date: 2023-03-01 19:23+0100\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language: fr\n"
 "Language-Team: fr <LL@li.org>\n"
@@ -16,20 +16,20 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Generated-By: Babel 2.16.0\n"
+"Generated-By: Babel 2.12.1\n"
 
-#: templates/1-index.html:7 templates/2-index.html:7
-msgid "Welcome to Holberton"
-msgstr "Bienvenue chez Holberton"  # Translation for the home_title message ID
-
-#: templates/1-index.html:11 templates/2-index.html:11
-msgid "Hello world"
-msgstr "Bonjour le monde"  # Translation for the home_header message ID
-
-#: templates/3-index.html:8
+#: templates/3-index.html:4 templates/4-index.html:4 templates/5-index.html:4
 msgid "home_title"
-msgstr "Bienvenue chez Holberton"  # Translation for the home_title message ID
+msgstr "Bienvenue chez Holberton"
 
-#: templates/3-index.html:12
+#: templates/3-index.html:7 templates/4-index.html:7 templates/5-index.html:7
 msgid "home_header"
-msgstr "Bonjour le monde!"  # Translation for the home_header message ID
+msgstr "Bonjour monde!"
+
+#: templates/5-index.html:11
+msgid "not_logged_in"
+msgstr "Vous n'êtes pas connecté."
+
+#: templates/5-index.html:13
+msgid "logged_in_as"
+msgstr "Vous êtes connecté en tant que %(username)s."
